	  rcfile option, and the toggle Meta-E.  Note that this doesn't
	  affect tabs entered using verbatim input, and that it's
	  disabled when NANO_SMALL is defined.  Also, change the short
	  command line option for --backupdir from -E to -C.  Changes to
	  toggle_init(), usage(), do_tab(), main(), nanorc.sample,
	  nano.1, nanorc.5, and nano.texi. (DLR, suggested by many
	  people)
	- Change the NO_UTF8 flag to the USE_UTF8 flag, and reverse its
	  meaning. (DLR)
- chars.c:
  make_mbstring()
	- Change erroneous ENABLE_EXTRA #ifdef to NANO_EXTRA to fix a
	  compilation problem when --enable-nanorc isn't used and
	  --enable-extra is. (DLR)
- cut.c:
  cut_line()
	- Set placewewant properly after cutting a line, to avoid a
	  problem where the screen won't be updated if (a) we're not on
	  the first page when we cut the line, and (b) immediately after
	  we cut the line, we hit End to move to the end of the line
	  after it. (DLR)
- files.c:
  read_line()
	- Rename variable prev to prevnode to avoid confusion. (DLR)
  load_open_file()
	- Remove an unneeded clearok(FALSE). (DLR)
  get_next_filename()
	- Use an unsigned long instead of an int for the number
	  prepended to the filename. (DLR)
  do_insertfile()
	- Set i to 0 when we get a filename via the file browser, so
	  that it's read in properly when we exit the file browser.
	  (DLR)
  open_prevnext_file()
	- Move up a misplaced assert. (DLR)
	- Rename variable next to next_file, to avoid confusion. (DLR)
  write_file()
	- Since lineswritten is a size_t, print its value as an unsigned
	  long instead of an unsigned int. (DLR)
	- Declare the size_t i only in the loop where it's used. (DLR)
  cwd_tab_completion(), browser_init()
	- Rename variable next to nextdir to avoid confusion. (DLR)
  input_tab()
	- Since list is a bool, assign it FALSE instead of 0. (DLR)
	- Add multibyte/wide character support, so that we don't end up
	  with a string that contains only part of a multibyte